--- a/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inherits EmployeeListBase
 
-<h3>EmployeeList</h3>
+<h3>Number of Employees Selected - @SelectedEmployees</h3>
 
 @if (Employees == null)
 {
@@ -9,20 +9,12 @@
 }
 else
 {
+    <input type="checkbox" @bind="ShowFooter" id="ShowFooter" bind:event="onchange" />
+    <label for="ShowFooter">Show Footer</label>
     <div class="card-deck">
         @foreach (var employee in Employees)
         {
-            <div class="card m-3" style="min-width: 18rem; max-width:30.5%;">
-                <div class="card-header">
-                    <h3>@employee.FirstName  @employee.LastName</h3>
-                </div>
-                <img class="card-img-top imageThumbail" src="@employee.PhotoPath" />
-                <div class="card-footer text-center">
-                    <a href="#" class="btn btn-primary m-1">View</a>
-                    <a href="#" class="btn btn-primary m-1">Edit</a>
-                    <a href="#" class="btn btn-danger m-1">Delete</a>
-                </div>
-            </div>
+            <EmployeeCard Employee="employee" ShowFooter="ShowFooter" EmployeeSelected="UpdateCount"></EmployeeCard>
         }
     </div>
 }
