--- a/EmployeeManagement.Web/_Imports.razor
+++ b/EmployeeManagement.Web/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.JSInterop
 @using EmployeeManagement.Web
 @using EmployeeManagement.Web.Shared
+@using EmployeeManagement.Web.Pages.DataBindingExample
+@using EmployeeManagement.Web.Pages.DataBindingAssignment
