Introduction to EditForm

--- a/EmployeeManagement.Web/Pages/EmployeeDetails.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeDetails.razor
@@ -28,11 +28,11 @@ else
                 {
                     <div class="card-footer text-center">
                         <a href="/" class="btn btn-primary">Back</a>
-                        <a href="#" class="btn btn-primary">Edit</a>
+                        <a href="@($"employeeedit/{Employee.EmployeeId}")" class="btn btn-primary">Edit</a>
                         <a href="#" class="btn btn-danger">Delete</a>
                     </div>
                 }
-                
+
             </div>
         </div>
     </div>
