--- a/EmployeeManagement.Web/_Imports.razor
+++ b/EmployeeManagement.Web/_Imports.razor
@@ -9,3 +9,4 @@
 @using EmployeeManagement.Web.Shared
 @using EmployeeManagement.Web.Pages.DataBindingExample
 @using EmployeeManagement.Web.Pages.DataBindingAssignment
+@using EmployeeManagement.Web.Pages.EmployeeEdit
