--- a/EmployeeManagement.Web/Pages/EmployeeCard.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeCard.razor
@@ -10,7 +10,7 @@
     {
         <div class="card-footer text-center">
             <a href="@($"employeedetails/{Employee.EmployeeId}")" class="btn btn-primary m-1">View</a>
-            <a href="#" class="btn btn-primary m-1">Edit</a>
+            <a href="@($"employeeedit/{Employee.EmployeeId}")" class="btn btn-primary m-1">Edit</a>
             <a href="#" class="btn btn-danger m-1">Delete</a>
         </div>
     }
