--- a/EmployeeManagement.Web/Pages/EmployeeEdit/EmployeeEdit.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeEdit/EmployeeEdit.razor
@@ -37,13 +37,37 @@
             Department
         </label>
         <div class="col-sm-10">
-            <InputSelect id="department" class="form-control"
-                         @bind-Value="DepartmentId">
+            <CustomInputSelect id="department" class="form-control"
+                               @bind-Value="Employee.DepartmentId">
                 @foreach (var dept in Departments)
                 {
                     <option value="@dept.DepartmentId">@dept.DepartmentName</option>
                 }
+            </CustomInputSelect>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="gender" class="col-sm-2 col-form-label">
+            Gender
+        </label>
+        <div class="col-sm-10">
+            <InputSelect id="gender" class="form-control"
+                         @bind-Value="Employee.Gender">
+                @foreach (var gender in Enum.GetValues(typeof(Gender)))
+                {
+                    <option value="@gender">@gender</option>
+                }
             </InputSelect>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="dob" class="col-sm-2 col-form-label">
+            Date of Birth
+        </label>
+        <div class="col-sm-10">
+            <InputDate id="dob" class="form-control"
+                       @bind-Value="Employee.DateOfBirth">
+            </InputDate>
         </div>
     </div>
 </EditForm>
