--- a/EmployeeManagement.Web/Pages/EmployeeEdit/EmployeeEdit.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeEdit/EmployeeEdit.razor
@@ -2,7 +2,8 @@
 
 @inherits EmployeeEditBase
 
-<EditForm Model="Employee">
+<EditForm Model="EmployeeEditModelObject" OnValidSubmit="HandleValidSubmission">
+    <ObjectGraphDataAnnotationsValidator />
     <h3>Edit Employee</h3>
     <hr />
     <div class="form-group row">
@@ -11,7 +12,8 @@
         </label>
         <div class="col-sm-10">
             <InputText id="firstName" class="form-control" placeholder="First Name"
-                       @bind-Value="Employee.FirstName"></InputText>
+                       @bind-Value="EmployeeEditModelObject.FirstName"></InputText>
+            <ValidationMessage For="@(() => EmployeeEditModelObject.FirstName)" />
         </div>
     </div>
     <div class="form-group row">
@@ -20,7 +22,8 @@
         </label>
         <div class="col-sm-10">
             <InputText id="lastname" class="form-control" placeholder="Last Name"
-                       @bind-Value="Employee.LastName"></InputText>
+                       @bind-Value="EmployeeEditModelObject.LastName"></InputText>
+            <ValidationMessage For="@(() => EmployeeEditModelObject.LastName)" />
         </div>
     </div>
     <div class="form-group row">
@@ -29,7 +32,18 @@
         </label>
         <div class="col-sm-10">
             <InputText id="email" class="form-control" placeholder="Email Address"
-                       @bind-Value="Employee.Email"></InputText>
+                       @bind-Value="EmployeeEditModelObject.Email"></InputText>
+            <ValidationMessage For="@(() => EmployeeEditModelObject.Email)" />
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="confirmemail" class="col-sm-2 col-form-label">
+            Confirm Email Address
+        </label>
+        <div class="col-sm-10">
+            <InputText id="confirmemail" class="form-control" placeholder="Confirm Email Address"
+                       @bind-Value="EmployeeEditModelObject.ConfirmEmail"></InputText>
+            <ValidationMessage For="@(() => EmployeeEditModelObject.ConfirmEmail)" />
         </div>
     </div>
     <div class="form-group row">
@@ -38,7 +52,7 @@
         </label>
         <div class="col-sm-10">
             <CustomInputSelect id="department" class="form-control"
-                               @bind-Value="Employee.DepartmentId">
+                               @bind-Value="EmployeeEditModelObject.DepartmentId">
                 @foreach (var dept in Departments)
                 {
                     <option value="@dept.DepartmentId">@dept.DepartmentName</option>
@@ -52,7 +66,7 @@
         </label>
         <div class="col-sm-10">
             <InputSelect id="gender" class="form-control"
-                         @bind-Value="Employee.Gender">
+                         @bind-Value="EmployeeEditModelObject.Gender">
                 @foreach (var gender in Enum.GetValues(typeof(Gender)))
                 {
                     <option value="@gender">@gender</option>
@@ -66,8 +80,20 @@
         </label>
         <div class="col-sm-10">
             <InputDate id="dob" class="form-control"
-                       @bind-Value="Employee.DateOfBirth">
+                       @bind-Value="EmployeeEditModelObject.DateOfBirth">
             </InputDate>
         </div>
     </div>
+    <div class="form-group row">
+        <label for="departmentName" class="col-sm-2 col-form-label">
+            Date of Birth
+        </label>
+        <div class="col-sm-10">
+            <InputText id="departmentName" class="form-control"
+                       @bind-Value="EmployeeEditModelObject.Department.DepartmentName">
+            </InputText>
+            <ValidationMessage For="@(() => EmployeeEditModelObject.Department.DepartmentName)" />
+        </div>
+    </div>
+    <button type="submit">Save</button>
 </EditForm>
