--- a/EmployeeManagement.Web/Pages/EmployeeEdit/EmployeeEdit.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeEdit/EmployeeEdit.razor
@@ -1,10 +1,11 @@
 ﻿@page "/employeeedit/{id}"
+@page "/employee"
 
 @inherits EmployeeEditBase
 
-<EditForm Model="EmployeeEditModelObject" OnValidSubmit="HandleValidSubmission">
+<EditForm Model="EmployeeEditModelObject" OnValidSubmit="HandleValidSubmit">
     <ObjectGraphDataAnnotationsValidator />
-    <h3>Edit Employee</h3>
+    <h3>@FormHeaderText</h3>
     <hr />
     <div class="form-group row">
         <label for="firstName" class="col-sm-2 col-form-label">
@@ -84,16 +85,20 @@
             </InputDate>
         </div>
     </div>
-    <div class="form-group row">
-        <label for="departmentName" class="col-sm-2 col-form-label">
-            Date of Birth
-        </label>
-        <div class="col-sm-10">
-            <InputText id="departmentName" class="form-control"
-                       @bind-Value="EmployeeEditModelObject.Department.DepartmentName">
-            </InputText>
-            <ValidationMessage For="@(() => EmployeeEditModelObject.Department.DepartmentName)" />
-        </div>
-    </div>
-    <button type="submit">Save</button>
+    @*<div class="form-group row">
+            <label for="departmentName" class="col-sm-2 col-form-label">
+                Date of Birth
+            </label>
+            <div class="col-sm-10">
+                <InputText id="departmentName" class="form-control"
+                           @bind-Value="EmployeeEditModelObject.Department.DepartmentName">
+                </InputText>
+                <ValidationMessage For="@(() => EmployeeEditModelObject.Department.DepartmentName)" />
+            </div>
+        </div>*@
+    <button class="btn btn-primary" type="submit">Submit</button>
+    @if (Employee.EmployeeId != 0)
+    {
+        <button class="btn btn-danger" type="button" @onclick="onDeleteClick">Delete</button>
+    }
 </EditForm>
